Added tags for swagger
