# personalProject/controllers/index.js
@@ -2,11 +2,17 @@ const mongodb = require('../db/connect');
 const { ObjectId } = require('mongodb');
 
 const redirectBase = async (req, res) => {
+	//#swagger.tags=['Redirect']
+	//#swagger.summary=Redirects base url
+	//#swagger.description=Just redirects base url to /games
 	res.redirect(['/games']);
 };
 
 const getAllGames = async (req, res) => {
 	try {
+		//#swagger.tags=['Games']
+		//#swagger.summary=Get all games
+		//#swagger.description=Get all the games from the database
 		const result = await mongodb
 			.getDb()
 			.db('board_card_games')
@@ -23,6 +29,9 @@ const getAllGames = async (req, res) => {
 
 const getSingleGame = async (req, res) => {
 	try {
+		//#swagger.tags=['Games']
+		//#swagger.summary=Get desired game
+		//#swagger.description=Enter an id to get the corresponding game
 		const objectId = new ObjectId(req.params.id);
 		const result = await mongodb
 			.getDb()
@@ -40,6 +49,9 @@ const getSingleGame = async (req, res) => {
 
 const createGame = async (req, res) => {
 	try {
+		//#swagger.tags=['Games']
+		//#swagger.summary=Add new game
+		//#swagger.description=Provide values to the fields to add a new game
 		const game = {
 			gameName: req.body.gameName,
 			creator: req.body.creator,
